[project]
name = "scienceweek-hueofthebrew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "en-core-web-sm",
    "loguru>=0.7.3",
    "nltk>=3.9.1",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "spacy>=3.8.7",
    "st-gsheets-connection>=0.1.0",
    "streamlit>=1.48.1",
    "wordcloud>=1.9.4",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
